--- a/Flu_Snakemake_Pipeline/Snakefile
+++ b/Flu_Snakemake_Pipeline/Snakefile
@@ -1,20 +1,24 @@
 SEGMENTS = ["pb2", "pb1", "pa", "np", "na", "mp", "ns", "ha"]
 #SEGMENTS = ["pb2", "pb1"]
 
+model_short = config.get("model", "650M")  # default to 650M
 
+# Map shorthand to full model names
+model_map = {
+    "650M": "esm2_t33_650M_UR50D",
+    "3B": "esm2_t36_3B_UR50D",
+    "15B": "esm2_t48_15B_UR50D"
+}
+
+if model_short not in model_map:
+    raise ValueError(f"Invalid model '{model_short}'. Choose from: 650M, 3B, 15B.")
+
+MODEL_NAME = model_map[model_short]
+ 
 rule all:
     input:
         expand(
-            "max_freqs_log_likelyhood_15B/Max_Freq_Fasta_LL_15B_{segment}.csv",
-            segment=SEGMENTS,
-        ),
-        expand(
-            "max_freqs_log_likelyhood_3B/Max_Freq_Fasta_LL_3B_{segment}.csv",
-            segment=SEGMENTS,
-        ),
-        expand(
-            "max_freqs_log_likelyhood_650M/Max_Freq_Fasta_LL_650M_{segment}.csv",
-            segment=SEGMENTS,
+            [f"max_freqs_log_likelyhood_{MODEL_NAME}/Max_Freq_Fasta_LL_{MODEL_NAME}_{segment}.csv" for segment in SEGMENTS]
         ),
 
 
@@ -75,67 +79,25 @@ rule extract_max_freq:
         """
 
 
-rule calc_ll_esm_650M:
+rule calc_ll_esm:
     input:
         max_freq="max_freqs/Max_Freq_Fasta_{segment}.csv",
         script="scripts/calc_ll_esm.py",
     output:
-        "max_freqs_log_likelyhood_650M/Max_Freq_Fasta_LL_650M_{segment}.csv",
+        "max_freqs_log_likelyhood_{MODEL_NAME}/Max_Freq_Fasta_LL_{MODEL_NAME}_{segment}.csv",
     shell:
         """
-        mkdir -p max_freqs_log_likelyhood_650M
-        start_time=$(date +%s)
-        python {input.script} --max_freq {input.max_freq} --segment {wildcards.segment} --model esm2_t33_650M_UR50D
-        end_time=$(date +%s)
-        runtime=$((end_time - start_time))
+        mkdir -p max_freqs_log_likelyhood_{wildcards.MODEL_NAME}
+        #start_time=$(date +%s)
+        python {input.script} --max_freq {input.max_freq} --segment {wildcards.segment} --model {wildcards.MODEL_NAME}
+        #end_time=$(date +%s)
+        #runtime=$((end_time - start_time))
         
-        # Add runtime as a new column to the output CSV
-        awk -v runtime=$runtime 'BEGIN {{FS=OFS=","}} NR==1 {{print $0, "runtime"}} NR>1 {{print $0, runtime}}' \
-            Max_Freq_Fasta_LL_{wildcards.segment}_esm2_t33_650M_UR50D.csv > temp_{wildcards.segment}.csv
+        #awk -v runtime=$runtime 'BEGIN {{FS=OFS=","}} NR==1 {{print $0, "runtime"}} NR>1 {{print $0, runtime}}' \
+        #    Max_Freq_Fasta_LL_{wildcards.MODEL_NAME}_{wildcards.segment}.csv > temp_{wildcards.segment}.csv
         
-        mv temp_{wildcards.segment}.csv max_freqs_log_likelyhood_650M/Max_Freq_Fasta_LL_650M_{wildcards.segment}.csv
-        """
-
-rule calc_ll_esm_3B:
-    input:
-        max_freq="max_freqs/Max_Freq_Fasta_{segment}.csv",
-        script="scripts/calc_ll_esm.py",
-    output:
-        "max_freqs_log_likelyhood_3B/Max_Freq_Fasta_LL_3B_{segment}.csv",
-    shell:
-        """
-        mkdir -p max_freqs_log_likelyhood_3B
-        start_time=$(date +%s)
-        python {input.script} --max_freq {input.max_freq} --segment {wildcards.segment} --model esm2_t36_3B_UR50D
-        end_time=$(date +%s)
-        runtime=$((end_time - start_time))
-        
-        # Add runtime as a new column to the output CSV
-        awk -v runtime=$runtime 'BEGIN {{FS=OFS=","}} NR==1 {{print $0, "runtime"}} NR>1 {{print $0, runtime}}' \
-            Max_Freq_Fasta_LL_{wildcards.segment}_esm2_t36_3B_UR50D.csv > temp_{wildcards.segment}.csv
-        
-        mv temp_{wildcards.segment}.csv max_freqs_log_likelyhood_3B/Max_Freq_Fasta_LL_3B_{wildcards.segment}.csv
-        """
-
-rule calc_ll_esm_15B:
-    input:
-        max_freq="max_freqs/Max_Freq_Fasta_{segment}.csv",
-        script="scripts/calc_ll_esm.py",
-    output:
-        "max_freqs_log_likelyhood_15B/Max_Freq_Fasta_LL_15B_{segment}.csv",
-    shell:
-        """
-        mkdir -p max_freqs_log_likelyhood_15B
-        start_time=$(date +%s)
-        python {input.script} --max_freq {input.max_freq} --segment {wildcards.segment} --model esm2_t48_15B_UR50D
-        end_time=$(date +%s)
-        runtime=$((end_time - start_time))
-        
-        # Add runtime as a new column to the output CSV
-        awk -v runtime=$runtime 'BEGIN {{FS=OFS=","}} NR==1 {{print $0, "runtime"}} NR>1 {{print $0, runtime}}' \
-            Max_Freq_Fasta_LL_{wildcards.segment}_esm2_t48_15B_UR50D.csv > temp_{wildcards.segment}.csv
-        
-        mv temp_{wildcards.segment}.csv max_freqs_log_likelyhood_15B/Max_Freq_Fasta_LL_15B_{wildcards.segment}.csv
+        #mv temp_{wildcards.segment}.csv max_freqs_log_likelyhood_{wildcards.MODEL_NAME}/Max_Freq_Fasta_LL_{wildcards.MODEL_NAME}_{wildcards.segment}.csv
+        mv Max_Freq_Fasta_LL_{wildcards.MODEL_NAME}_{wildcards.segment}.csv max_freqs_log_likelyhood_{wildcards.MODEL_NAME}/Max_Freq_Fasta_LL_{wildcards.MODEL_NAME}_{wildcards.segment}.csv
         """
 
 rule generate_max_freq_v_ll_plots:
