remove large tree files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 .DS_Store
 Flu_Snakemake_Pipeline/envs/nextstrain-base.sif
 Flu_Snakemake_Pipeline/envs/python-data-stack.sif
@@ -7,3 +6,5 @@ Flu_Snakemake_Pipeline/scripts/calc_ll_esm_fine_tune.py
 Flu_Snakemake_Pipeline/esm2_t33_650M_UR50D_Fine_Tune_Models/
 Flu_Snakemake_Pipeline/esm2_t48_15B_UR50D_Fine_Tune_Models/
 Flu_Snakemake_Pipeline/esm2_t36_3B_UR50D_Fine_Tune_Models/
+ESM_Trees_3B/
+ESM_Trees_3B_Fine_Tune/
